# FedVLA_sim

./: .gitignore  DATA_COLLECTION.md  README.md  check_episodes.py  collect_96.sh  collect_multiple_episodes.sh  launch_cube_stacking.sh  mycobot_episodes_README.md  reference.md  run_inference_visualization.sh  run_realtime_inference.sh
DP/: README.md  dataset.py  inference_gazebo.py  inference_modified.py  inference_realtime.py  model.py  resume_training.sh  run.sh  train.py
mycobot_episodes/episode_20250521_221130_096/: states.json
mycobot_episodes/episode_20250521_221316_765/: states.json
mycobot_episodes/episode_20250521_221404_756/: states.json
mycobot_episodes/episode_20250521_221454_033/: states.json
mycobot_episodes/episode_20250521_221547_424/: states.json
mycobot_episodes/episode_20250521_221635_289/: states.json
mycobot_episodes/episode_20250521_221737_562/: states.json
mycobot_episodes/episode_20250521_221926_836/: states.json
mycobot_episodes/episode_20250521_222020_855/: states.json
mycobot_episodes/episode_20250521_222112_148/: states.json
mycobot_episodes/episode_20250521_222205_790/: states.json
mycobot_episodes/episode_20250521_222301_903/: states.json
mycobot_episodes/episode_20250521_222354_997/: states.json
mycobot_episodes/episode_20250521_222448_087/: states.json
mycobot_episodes/episode_20250521_222636_232/: states.json
mycobot_episodes/episode_20250521_222730_897/: states.json
mycobot_episodes/episode_20250521_222822_318/: states.json
mycobot_episodes/episode_20250521_222913_985/: states.json
mycobot_episodes/episode_20250521_223101_884/: states.json
mycobot_episodes/episode_20250521_223150_608/: states.json
mycobot_episodes/episode_20250521_223243_672/: states.json
mycobot_episodes/episode_20250521_223339_110/: states.json
mycobot_episodes/episode_20250521_223429_489/: states.json
mycobot_episodes/episode_20250521_223518_008/: states.json
mycobot_episodes/episode_20250521_223615_554/: states.json
mycobot_episodes/episode_20250521_223703_175/: states.json
mycobot_episodes/episode_20250521_223849_735/: states.json
mycobot_episodes/episode_20250521_223943_046/: states.json
mycobot_episodes/episode_20250521_224034_710/: states.json
mycobot_episodes/episode_20250521_224129_664/: states.json
mycobot_episodes/episode_20250521_224222_236/: states.json
mycobot_episodes/episode_20250521_224315_154/: states.json
mycobot_episodes/episode_20250521_224407_133/: states.json
mycobot_episodes/episode_20250521_224455_124/: states.json
mycobot_episodes/episode_20250521_224541_946/: states.json
mycobot_episodes/episode_20250521_224632_249/: states.json
mycobot_episodes/episode_20250521_224725_070/: states.json
mycobot_episodes/episode_20250521_224912_520/: states.json
mycobot_episodes/episode_20250521_225006_682/: states.json
mycobot_episodes/episode_20250521_225156_087/: states.json
mycobot_episodes/episode_20250521_225243_578/: states.json
mycobot_episodes/episode_20250521_225422_281/: states.json
mycobot_episodes/episode_20250521_225514_798/: states.json
mycobot_episodes/episode_20250521_225756_839/: states.json
mycobot_episodes/episode_20250521_225847_912/: states.json
mycobot_episodes/episode_20250521_225945_063/: states.json
mycobot_episodes/episode_20250521_230037_628/: states.json
mycobot_episodes/episode_20250521_230126_585/: states.json
mycobot_episodes/episode_20250521_230223_312/: states.json
mycobot_episodes/episode_20250521_230314_313/: states.json
mycobot_episodes/episode_20250521_230409_328/: states.json
mycobot_episodes/episode_20250521_230500_667/: states.json
mycobot_episodes/episode_20250521_230652_660/: states.json
mycobot_episodes/episode_20250521_230745_756/: states.json
mycobot_episodes/episode_20250521_230927_838/: states.json
mycobot_episodes/episode_20250521_231019_935/: states.json
mycobot_episodes/episode_20250521_231117_472/: states.json
mycobot_episodes/episode_20250521_231306_635/: states.json
mycobot_episodes/episode_20250521_231352_464/: states.json
mycobot_episodes/episode_20250521_231539_705/: states.json
mycobot_episodes/episode_20250521_231629_653/: states.json
src/mycobot_stacking_project/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/mycobot_stacking_project/config/: cube_detector_params.yaml
src/mycobot_stacking_project/include/mycobot_stacking_project/: cube_detector_node.hpp  cube_spawner_node.hpp  stacking_manager_node.hpp
src/mycobot_stacking_project/launch/: collect_data.launch.py  fixed_rviz.launch.py  fixed_stacking_task.launch.py  mycobot_gazebo_with_friction.launch.py  start_stacking_task.launch.py
src/mycobot_stacking_project/models/orange_cube/: model.config  model.sdf
src/mycobot_stacking_project/models/yellow_cube/: model.config  model.sdf
src/mycobot_stacking_project/mycobot_stacking_project/: stacking_manager_node.py
src/mycobot_stacking_project/rviz/: stacking_display.rviz
src/mycobot_stacking_project/scripts/: add_cubes.sh  run_episode_collection.py  verify_collected_data.py
src/mycobot_stacking_project/src/: cube_detector_node.cpp  cube_spawner_node.cpp  stacking_manager_node.cpp
src/mycobot_stacking_project/urdf/: gripper_friction.urdf.xacro  mycobot_280_with_friction.urdf.xacro
src/mycobot_stacking_project/worlds/: cube_stacking_world.world
(+619 files in other folders)
